	* Added conf.supybot.plugins.Karma.allowSelfRating, which determines
	whether users are allowed to adjust the karma of their current nick.

	* Added --nolimit option to Misc.last, which causes it to return all
	matches that are in the history.

	* Added conf.supybot.plugins.Herald.defaultHerald, which provides
	a default herald to use for unregistered users.  Herald.default was
	also added as a friendly interface to managing the defaultHerald.

	* Added Weather.wunder, which uses wunderground.com to report the
	current weather status.

	* Added an Infobot plugin, to emulate Infobot.

	* Changed supybot.defaultCapabilities to be a space-separated
	list rather than a comma-separated list.  Also added a check to
	make sure -owner was in supybot.defaultCapabilities, and to
	require a command-line option to allow it not to be present.
	
	* Added Sourceforge.fight, which returns the list of specified
	projects and their bug/rfe count in sorted order, least to most.

	* Added Utilities.reply for replying to a person with text.  Like
	echo, but it prepends the nick like the bot normally does.
	
	* Changed Utilities.success to accept an option <text> argument
	for text to be appended to the success message.
	
	* Changed User.{addhostmask,removehostmask,register,unregister}
	to allow owner users to do what they will with their users.  You
	can now add hostmasks, remove hostmasks, register users, and
	unregister users willy-nilly.
	
	* Changed and moved several configuration variables.
	supybot.{throttleTime,maxHistoryLength,pingServer,pingInterval}
	all moved to supybot.protocols.irc; supybot.httpPeekSize moved to
	supybot.protocols.http; supybot.threadAllCommands moved to
	supybot.debug.threadAllCommands, and probably a few others I
	forgot to mention.
	
	* Added Http.zipinfo, which returns a veritable plethora of
	information about the supplied zip code.

	* Added a configuration variable for every plugin, "public", that