@@ -1,3 +1,5 @@
+	* Added the Currency plugin, to perform currency conversions.
+
 	* Added conf.supybot.plugins.Karma.allowSelfRating, which determines
 	whether users are allowed to adjust the karma of their current nick.
 
